add globals to pattern library

--- a/fonts/fonts.less
+++ b/fonts/fonts.less
@@ -1,8 +1,6 @@
 // Typography
 //
-// These are the primary fonts used in DLx projects. Other fonts may be used as appropriate when representing linguistic data; however, fonts used for actual DLx interfaces should be limited to the ones shown here.
-//
-// Projects should use a line height of 1.5.
+// These are the primary fonts used in DLx projects. Other fonts may be used as appropriate when representing linguistic data; however, fonts used for actual DLx interfaces should be limited to the ones shown here. Projects should use a line height of 1.5.
 //
 // Weight: 1
 //
