--- a/globals/colors.less
+++ b/globals/colors.less
@@ -128,7 +128,7 @@
   // Transparent
   //
   // $lightblue-transparent     - rgba(92, 175, 255, 0.2); light blue transparent
-  // $verylightblue-transparent - rgba(136, 196, 254, 0.2); light blue transparent
+  // $verylightblue-transparent - rgba(136, 196, 254, 0.2); very light blue transparent
   //
   // Weight: 8
   //
