--- a/globals/variables.less
+++ b/globals/variables.less
@@ -10,7 +10,7 @@
 
   // --bold
   //
-  // The font weight to use for bold styling. Use `600` when bolding text in Fira Sans Regular, and `500` when bolding text in Fira Sans Light. Default: 600.
+  // The font weight to use for bold styling. Use `600` when bolding text in Fira Sans Regular, and `500` when bolding text in Fira Sans Light. Default: `600`.
   //
   // Styleguide Variables.bold
   --bold: 600;
