--- a/kss/patterns.less
+++ b/kss/patterns.less
@@ -1,3 +1,5 @@
+// NOTE: This file is old, and is being cannibalized for patterns.css
+
 @import 'less/fonts.less';
 @import 'less/colors.less';
 @import 'less/variables.less';
@@ -18,15 +20,5 @@
 
   code { .code; }
   pre { .pre; }
-
-  img {
-    height: 3rem;
-    width: 3rem;
-  }
-
-  img.icon-large {
-    height: 10rem;
-    width: auto;
-  }
 
 }
