add Stylelint config

--- a/components/banner/banner.less
+++ b/components/banner/banner.less
@@ -1,3 +1,7 @@
+@import (reference) 'https://cdn.digitallinguistics.io/less/colors.less';
+@import (reference) 'https://cdn.digitallinguistics.io/less/variables.less';
+@import 'https://cdn.digitallinguistics.io/less/page-title.less';
+
 // Banner
 //
 // A site banner at the top of the page. When including additional elements inside the banner, you might want to set `margin-left: auto;` on the element to push it to the opposite end of the banner from the `<h1>`.
@@ -8,16 +12,16 @@
 .banner {
 
   .blue-background;
-  align-items: center;
-  box-shadow: var(--shadow-deep);
-  display: flex;
-  flex-direction: row;
-  font-weight: 300;
+  align-items:     center;
+  box-shadow:      var(--shadow-deep);
+  display:         flex;
+  flex-direction:  row;
+  font-weight:     300;
   justify-content: space-between;
-  overflow-wrap: break-word;
-  text-align: center;
-  width: 100%;
-  word-wrap: break-word;
+  overflow-wrap:   break-word;
+  text-align:      center;
+  width:           100%;
+  word-wrap:       break-word;
 
   h1 {
     .page-title;
