fix LESS styles for content and form elements

--- a/components/content/content.less
+++ b/components/content/content.less
@@ -3,3 +3,9 @@
 // Elements containing text and other core content
 //
 // Styleguide Components.Content
+
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import '@{cdn}/details.less';
+@import '@{cdn}/hanging.less';
+@import '@{cdn}/pre.less';
