--- a/components/content/pre/pre.less
+++ b/components/content/pre/pre.less
@@ -1,3 +1,5 @@
+@import 'https://cdn.digitallinguistics.io/less/code.less';
+
 // Pre
 //
 // Used for standalone code blocks (for inline code blocks, see the `<code>` tag). If the `<pre>` element is used by itself, without a `<code>` element inside it, it will simply display as preformatted text. If a `<code>` element is included inside the `<pre>`, however, that element will be `display: block;`.
@@ -12,8 +14,8 @@
 
   code {
     .code;
-    display: block;
-    overflow-x: auto;
+    display:     block;
+    overflow-x:  auto;
     white-space: pre;
   }
 
