--- a/components/forms/forms.less
+++ b/components/forms/forms.less
@@ -3,3 +3,14 @@
 // Interactive elements relating to forms.
 //
 // Styleguide Components.Forms
+
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import '@{cdn}/button.less';
+@import '@{cdn}/field.less';
+@import '@{cdn}/fieldset.less';
+@import '@{cdn}/input.less';
+@import '@{cdn}/label.less';
+@import '@{cdn}/select.less';
+@import '@{cdn}/textarea.less';
+@import '@{cdn}/textline.less';
