--- a/components/forms/textline/textline.less
+++ b/components/forms/textline/textline.less
@@ -12,19 +12,23 @@
 .textline {
 
   align-items: baseline;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display:     flex;
+  flex-flow:   row wrap;
 
-  h1, h2, h3, h4, h5, h6,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
   span
   {
-    font-size: smaller;
-    font-weight: var(--bold);
-    min-width: 0;
+    font-size:     smaller;
+    font-weight:   var(--bold);
+    min-width:     0;
     overflow-wrap: break-word;
-    padding: var(--padding-text);
-    word-wrap: break-word;
+    padding:       var(--padding-text);
+    word-wrap:     break-word;
   }
 
   > div {
@@ -35,19 +39,19 @@
 
   input {
 
-    border: 0;
-    border-bottom: var(--border);
+    border:              0;
+    border-bottom:       var(--border);
     border-bottom-color: var(--gray);
-    box-shadow: unset;
-    cursor: text;
-    min-height: 1.5em;
-    outline: 0;
-    padding: var(--padding-text);
+    box-shadow:          unset;
+    cursor:              text;
+    min-height:          1.5em;
+    outline:             0;
+    padding:             var(--padding-text);
 
     &:disabled {
       background-color: var(--disabled-background);
-      color: var(--disabled-color);
-      cursor: not-allowed;
+      color:            var(--disabled-color);
+      cursor:           not-allowed;
     }
 
     &:focus:not(:disabled) {
@@ -59,10 +63,13 @@
       }
 
       + p {
+
         color: var(--blue);
+
         a {
           font-weight: var(--bold);
         }
+
       }
 
     }
@@ -70,7 +77,7 @@
     &:invalid:not(:disabled) {
 
       border-bottom-color: var(--darkred);
-      color: var(--red);
+      color:               var(--red);
 
       + p {
         color: var(--red);
@@ -79,14 +86,14 @@
     }
 
     + p {
-      color: var(--placeholder);
+      color:     var(--placeholder);
       font-size: smaller;
     }
 
   }
 
   p {
-    margin: 0;
+    margin:  0;
     padding: var(--padding-text);
   }
 
