fix LESS files for inline and layout components

--- a/components/inline/inline.less
+++ b/components/inline/inline.less
@@ -4,222 +4,15 @@
 //
 // Styleguide Components.Inline
 
+@cdn: 'https://cdn.digitallinguistics.io/less';
 
-// Code Block
-//
-// The `<code>` element is used for inline code blocks (use the `<pre>` element for standalone code blocks).
-//
-// Markup: code.hbs
-//
-// Styleguide Components.Inline.code
-.code {
-  background-color: var(--codegray);
-  border: var(--border);
-  border-radius: var(--border-radius);
-  color: var(--codedarkgray);
-  font-family: var(--font-mono);
-  font-size: 0.75em;
-  font-style: normal;
-  padding: var(--padding-text);
-  white-space: pre-line;
-}
-
-// Definition
-//
-// A `<dfn>` tag is used the first time an element is defined. The definition of the term should be given in the surrounding text.
-//
-// Markup: dfn.hbs
-//
-// Styleguide Components.Inline.dfn
-.dfn {
-  font-style: italic;
-}
-
-// Emphasis
-//
-// Used for standard emphasis within text.
-//
-// Markup: em.hbs
-//
-// Styleguide Components.Inline.em
-.em {
-  font-style: italic;
-}
-
-// Italic
-//
-// Used for general italic styling. Other more semantic classes should be preferred over this one when possible. Commonly used with `<i>` elements (which should also be avoided).
-//
-// Markup: italic.hbs
-//
-// Styleguide Components.Inline.italic
-.italic {
-  font-style: italic;
-}
-
-// Keyboard
-//
-// Used for indicating keyboard input.
-//
-// Markup: kbd.hbs
-//
-// Styleguide Components.Inline.kbd
-.kbd {
-
-  background-color: var(--codegray);
-  background-image: linear-gradient(to top, rgba(0,0,0,0.1), rgba(0,0,0,0));
-  border: 0.035em solid #BBB;
-  border-radius: var(--border-radius);
-	color: #444;
-  padding: var(--padding-text);
-	text-align: center;
-	text-shadow: 0em var(--line-width) white;
-  white-space: nowrap;
-
-  box-shadow: 0em 0.15em 0em var(--gray),
-    0.02em 0.225em 0.2em var(--darkgray),
-    inset 0em var(--line-width) var(--line-width) white,
-    inset 0em -0.075em 0.225em var(--gray);
-
-}
-
-// Link
-//
-// The `.link` class styles an anchor (`<a>`) element as an inline link. Change the CSS `--link-color` variable to change the link's color.
-//
-// Markup: link.hbs
-//
-// :hover   - When the link is hovered over
-// :visited - When the link has already been visited
-//
-// Styleguide Components.Inline.link
-.link {
-
-  background: transparent;
-  border-bottom: var(--underline-transparent);
-  color: var(--link-color);
-  text-decoration: none;
-
-  &:link {
-    border-bottom: var(--underline-transparent);
-    color: var(--link-color);
-    text-decoration: none;
-  }
-
-  &:visited {
-    --link-color: var(--link-color-visited);
-  }
-
-  &:hover {
-    border-bottom: var(--underline);
-  }
-
-}
-
-.link-white {
-  .link;
-  --link-color: white;
-  &:visited { --link-color: white; }
-}
-
-// Strong
-//
-// Used to draw the reader's attention to a term or concept, indicating that it is important.
-//
-// Markup: strong.hbs
-//
-// Styleguide Components.Inline.strong
-.strong {
-  color: var(--verydarkblue);
-  font-weight: var(--bold);
-}
-
-
-// Transcriptions
-//
-// Classes for styling inline transcriptions.
-//
-// Styleguide Components.Inline.Transcriptions
-
-
-// Orthographic
-//
-// This class should be used when citing an orthographic representation of some data, e.g., when writing about writing systems.
-//
-// Markup: orthographic.hbs
-//
-// Styleguide Components.Inline.Transcriptions.orthographic
-.orthographic {
-
-  .unicode;
-
-  &::before {
-    content: '⟨';
-    padding-right: var(--padding-ipa);
-  }
-
-  &::after  {
-    content: '⟩';
-    padding-left: var(--padding-ipa);
-  }
-
-}
-
-// Phonemic
-//
-// Used for phonemic representations of data.
-//
-// Markup: phonemic.hbs
-//
-// Styleguide Components.Inline.Transcriptions.phonemic
-.phonemic {
-
-  .unicode;
-
-  &::before {
-    content: '/';
-    padding-right: var(--padding-ipa);
-  }
-
-  &::after  {
-    content: '/';
-    padding-left: var(--padding-ipa);
-  }
-
-}
-
-// Phonetic
-//
-// Used for phonetic representations of data.
-//
-// Markup: phonetic.hbs
-//
-// Styleguide Components.Inline.Transcriptions.phonetic
-.phonetic {
-
-  .unicode;
-
-  &::before {
-    content: '[';
-    padding-right: var(--padding-ipa);
-  }
-
-  &::after  {
-    content: ']';
-    padding-left: var(--padding-ipa);
-  }
-
-}
-
-// Unicode
-//
-// Used when a Unicode font is needed. More semantic styles such as `.phonetic` or `.phonemic` should be preferred over this one when possible.
-//
-// Markup: unicode.hbs
-//
-// Styleguide Components.Inline.Transcriptions.unicode
-.unicode {
-  font-family: var(--font-unicode);
-  font-size: 1.15em;
-  // line-height: 1; // QUESTION: Why was this here originally?
-}
+@import '@{cdn}/abbr.less';
+@import '@{cdn}/cite.less';
+@import '@{cdn}/code.less';
+@import '@{cdn}/dfn.less';
+@import '@{cdn}/em.less';
+@import '@{cdn}/italic.less';
+@import '@{cdn}/kbd.less';
+@import '@{cdn}/link.less';
+@import '@{cdn}/strong.less';
+@import '@{cdn}/transcriptions.less';
