--- a/components/layout/layout.less
+++ b/components/layout/layout.less
@@ -3,3 +3,8 @@
 // Larger block elements that constitute the main areas of a page layout
 //
 // Styleguide Components.Layout
+
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import '@{cdn}/banner.less';
+@import '@{cdn}/nav.less';
