--- a/components/layout/nav/nav.less
+++ b/components/layout/nav/nav.less
@@ -10,24 +10,23 @@
   ul {
 
     .blue-background;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    font-size: 1.25em;
-    list-style: none;
+    display:         flex;
+    flex-flow:       row wrap;
+    font-size:       1.25em;
+    list-style:      none;
     justify-content: space-around;
-    margin: 0;
-    padding: 0;
+    margin:          0;
+    padding:         0;
 
   }
 
   li {
-    flex-grow: 1;
-    min-width: 0;
+    flex-grow:     1;
+    min-width:     0;
     overflow-wrap: break-word;
-    padding: 0.5em;
-    text-align: center;
-    word-wrap: break-word;
+    padding:       0.5em;
+    text-align:    center;
+    word-wrap:     break-word;
   }
 
   a {
