fix LESS files for lists

--- a/components/components.less
+++ b/components/components.less
@@ -8,5 +8,9 @@
 
 @cdn: 'https://cdn.digitallinguistics.io/less';
 
-@import '@{cdn}/details.less';
+@import '@{cdn}/content.less';
 @import '@{cdn}/forms.less';
+@import '@{cdn}/headings.less';
+@import '@{cdn}/inline.less';
+@import '@{cdn}/layout.less';
+@import '@{cdn}/lists.less';
