--- a/components/lists/lists.less
+++ b/components/lists/lists.less
@@ -3,3 +3,9 @@
 // Styling for lists
 //
 // Styleguide Components.Lists
+
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import '@{cdn}/bulleted.less';
+@import '@{cdn}/numbered.less';
+@import '@{cdn}/reference-list.less';
