--- a/kss/patterns.css
+++ b/kss/patterns.css
@@ -1,3 +1,15 @@
+* {
+  font: inherit;
+}
+
+.kss-modifiers__example {
+  border-collapse: collapse;
+  font-family:     var(--font);
+  line-height:     1.5;
+  text-decoration: none;
+  vertical-align:  baseline;
+}
+
 .kss-modifiers__example img {
   height: 3rem;
   width:  3rem;
