--- a/components/content/details/details.less
+++ b/components/content/details/details.less
@@ -1,6 +1,6 @@
 // Details / Summary
 //
-// A collapsable `<details>` element, with an optional `<summary>` element. **NOTE:** Not currently supported on Edge.
+// A collapsable `<details>` element, with an optional `<summary>` element.
 //
 // Markup: details.hbs
 //
