--- a/globals/variables.less
+++ b/globals/variables.less
@@ -95,7 +95,7 @@
   // The box shadows to use on buttons and other button-like elements. The styling is color-agnostic, and works by applying partially transparent box shadows, so it can be applied to elements of any color.
   //
   // Styleguide Variables.shadow-button
-  --shadow-button: inset -0.075em -0.075em 0.15em rgba(0,0,0,0.15), var(--shadow);
+  --shadow-button: inset -0.075em -0.075em 0.15em rgba(0, 0, 0, 0.15), var(--shadow);
 
   // --shadow-deep
   //
