--- a/kss/dlx.less
+++ b/kss/dlx.less
@@ -1,4 +1,7 @@
-@import '../fonts/fonts.less';
-@import '../globals/colors.less';
-@import '../globals/variables.less';
-@import '../components/components.less';
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import '@{cdn}/fonts.less';
+@import '@{cdn}/colors.less';
+@import '@{cdn}/variables.less';
+@import '@{cdn}/classes.less';
+@import '@{cdn}/components.less';
