fix LESS dependencies

--- a/components/components.less
+++ b/components/components.less
@@ -8,6 +8,8 @@
 
 @cdn: 'https://cdn.digitallinguistics.io/less';
 
+@import (reference) '@{cdn}/classes.less';
+
 @import '@{cdn}/content.less';
 @import '@{cdn}/forms.less';
 @import '@{cdn}/headings.less';
