--- a/components/forms/forms.less
+++ b/components/forms/forms.less
@@ -6,6 +6,8 @@
 
 @cdn: 'https://cdn.digitallinguistics.io/less';
 
+@import (reference) 'https://cdn.digitallinguistics.io/less/classes.less';
+
 @import '@{cdn}/button.less';
 @import '@{cdn}/field.less';
 @import '@{cdn}/fieldset.less';
