--- a/components/forms/input/input.less
+++ b/components/forms/input/input.less
@@ -1,3 +1,9 @@
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import (reference) '@{cdn}/classes.less';
+@import '@{cdn}/button.less';
+@import '@{cdn}/field.less';
+
 // Input Elements
 //
 // Form input elements. Adding the `.input` clas to any `<input>` element will style that element as appropriate for its input type.
