--- a/components/inline/transcriptions/orthographic/orthographic.less
+++ b/components/inline/transcriptions/orthographic/orthographic.less
@@ -1,3 +1,5 @@
+@import 'https://cdn.digitallinguistics.io/less/unicode.less';
+
 // Orthographic
 //
 // This class should be used when citing an orthographic representation of some data, e.g., when writing about writing systems.
