--- a/components/layout/banner/banner.less
+++ b/components/layout/banner/banner.less
@@ -1,3 +1,8 @@
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import (reference) '@{cdn}/classes.less';
+@import '@{cdn}/page-title.less';
+
 // Banner
 //
 // A site banner at the top of the page. When including additional elements inside the banner, you might want to set `margin-left: auto;` on the element to push it to the opposite end of the banner from the `<h1>`.
