--- a/components/layout/layout.less
+++ b/components/layout/layout.less
@@ -6,5 +6,8 @@
 
 @cdn: 'https://cdn.digitallinguistics.io/less';
 
+@import (reference) '@{cdn}/classes.less';
 @import '@{cdn}/banner.less';
+@import '@{cdn}/link.less';
 @import '@{cdn}/nav.less';
+@import '@{cdn}/page-title.less';
