--- a/components/layout/nav/nav.less
+++ b/components/layout/nav/nav.less
@@ -1,3 +1,8 @@
+@cdn: 'https://cdn.digitallinguistics.io/less';
+
+@import (reference) '@{cdn}/classes.less';
+@import '@{cdn}/link.less';
+
 // Navigation
 //
 // A main navigation bar at the top of the page. The `.banner` and `.nav` classes are generally compatible.
