--- a/components/lists/lists.less
+++ b/components/lists/lists.less
@@ -7,5 +7,8 @@
 @cdn: 'https://cdn.digitallinguistics.io/less';
 
 @import '@{cdn}/bulleted.less';
+@import '@{cdn}/cite.less';
+@import '@{cdn}/link.less';
 @import '@{cdn}/numbered.less';
 @import '@{cdn}/reference-list.less';
+@import '@{cdn}/section-header.less';
