--- a/components/forms/textarea/textarea.less
+++ b/components/forms/textarea/textarea.less
@@ -1,3 +1,5 @@
+@import 'https://cdn.digitallinguistics.io/less/field.less';
+
 // Textarea
 //
 // `<textarea>` elements use the same styling as text inputs.
