--- a/components/forms/textline/textline.less
+++ b/components/forms/textline/textline.less
@@ -86,7 +86,7 @@
     }
 
     + p {
-      color:     var(--placeholder);
+      color:     var(--placeholder-color);
       font-size: smaller;
     }
 
