--- a/globals/colors.less
+++ b/globals/colors.less
@@ -55,7 +55,7 @@
   --lightgray:           #F5F2F0;
   --disabled-color:      #CAD2D3;
   --disabled-background: #EAEDED;
-  --placeholder:         #757575;
+  --placeholder-color:   #757575;
 
   // Green
   //
