add placeholder-color to docs

--- a/globals/colors.less
+++ b/globals/colors.less
@@ -44,6 +44,7 @@
   // $lightgray           - #F5F2F0; light gray
   // $disabled-color      - #CAD2D3; font color for disabled inputs
   // $disabled-background - #EAEDED; background color for disabled inputs
+  // $placeholder-color   - #757575; color for placeholder text in inputs
   //
   // Weight: 3
   //
