--- a/components/inline/strong/strong.less
+++ b/components/inline/strong/strong.less
@@ -6,6 +6,6 @@
 //
 // Styleguide Components.Inline.strong
 .strong {
-  color:       var(--verydarkblue);
+  color:       var(--blue);
   font-weight: var(--bold);
 }
