--- a/globals/classes.less
+++ b/globals/classes.less
@@ -2,11 +2,7 @@
 
 .wugblue         { color: var(--wugblue); }
 
-.verydarkblue    { color: var(--verydarkblue); }
-.darkblue        { color: var(--darkblue); }
 .blue            { color: var(--blue); }
-.lightblue       { color: var(--lightblue); }
-.verylightblue   { color: var(--verylightblue); }
 
 .codegray        { color: var(--codegray); } // same color as Atom One Light's background
 .darkgray        { color: var(--darkgray); }
@@ -46,20 +42,6 @@
 }
 
 // Blue
-.verydarkblue-background {
-  --link-color: white;
-  --link-color-visited: white;
-  background-color: var(--verydarkblue);
-  color: white;
-}
-
-.darkblue-background {
-  --link-color: white;
-  --link-color-visited: white;
-  background-color: var(--darkblue);
-  color: white;
-}
-
 .blue-background {
   --link-color: white;
   --link-color-visited: white;
@@ -67,23 +49,8 @@
   color: white;
 }
 
-.lightblue-background {
-  --link-color: white;
-  --link-color-visited: white;
-  background-color: var(--lightblue);
-  color: white;
-}
-
-.verylightblue-background {
-  background-color: var(--verylightblue);
-}
-
-.lightblue-transparent {
-  background-color: var(--lightblue-transparent);
-}
-
-.verylightblue-transparent {
-  background-color: var(--verylightblue-transparent);
+.blue-transparent {
+  background-color: var(--blue-transparent);
 }
 
 // Gray
