--- a/globals/colors.less
+++ b/globals/colors.less
@@ -20,20 +20,12 @@
 
   // Blue
   //
-  // $verydarkblue  - #017CF2; very dark blue
-  // $darkblue      - #0F89FF; dark blue
-  // $blue          - #3399FF; blue
-  // $lightblue     - #5CAFFF; light blue
-  // $verylightblue - #88C4FE; very light blue
+  // $blue - #0F89FF; dark blue
   //
   // Weight: 2
   //
   // Styleguide Colors.Blue
-  --verydarkblue:  #017CF2;
-  --darkblue:      #0F89FF;
-  --blue:          #39F;
-  --lightblue:     #5CAFFF;
-  --verylightblue: #88C4FE;
+  --blue: #0F89FF;
 
   // Gray
   //
@@ -128,13 +120,11 @@
 
   // Transparent
   //
-  // $lightblue-transparent     - rgba(92, 175, 255, 0.2); light blue transparent
-  // $verylightblue-transparent - rgba(136, 196, 254, 0.2); very light blue transparent
+  // $blue-transparent - rgba(15, 137, 255, 0.2); blue transparent
   //
   // Weight: 8
   //
   // Styleguide Colors.Transparent
-  --lightblue-transparent:     rgba(92, 175, 255, 0.2);
-  --verylightblue-transparent: rgba(136, 196, 254, 0.2);
+  --blue-transparent: rgba(15, 137, 255, 0.2);
 
 }
