--- a/globals/colors.less
+++ b/globals/colors.less
@@ -20,12 +20,20 @@
 
   // Blue
   //
-  // $blue - #0F89FF; dark blue
+  // $verylightblue - #60B0FD; very light blue
+  // $lightblue     - #339BFF; light blue
+  // $blue          - #0F89FF; blue
+  // $darkblue      - #0080FC; dark blue
+  // $verydarkblue  - #0158AC; very dark blue
   //
   // Weight: 2
   //
   // Styleguide Colors.Blue
-  --blue: #0F89FF;
+  --verylightblue: #60B0FD;
+  --lightblue:     #339BFF;
+  --blue:          #0F89FF;
+  --darkblue:      #0080FC;
+  --verydarkblue:  #0158AC;
 
   // Gray
   //
@@ -120,11 +128,19 @@
 
   // Transparent
   //
-  // $blue-transparent - rgba(15, 137, 255, 0.2); blue transparent
+  // $verylightblue-transparent - rgba(96, 176, 253, 0.2); very light blue transparent
+  // $lightblue-transparent     - rgba(51, 155, 255, 0.2); light blue transparent
+  // $blue-transparent          - rgba(15, 137, 255, 0.2); blue transparent
+  // $darkblue-transparent      - rgba(0, 128, 252, 0.2); dark blue transparent
+  // $verydarkblue-transparent  - rgba(1, 88, 172, 0.2); very dark blue transparent
   //
   // Weight: 8
   //
   // Styleguide Colors.Transparent
-  --blue-transparent: rgba(15, 137, 255, 0.2);
+  --verylightblue-transparent: rgba(96, 176, 253, 0.2);
+  --lightblue-transparent:     rgba(51, 155, 255, 0.2);
+  --blue-transparent:          rgba(15, 137, 255, 0.2);
+  --darkblue-transparent:      rgba(0, 128, 252, 0.2);
+  --verydarkblue-transparent:  rgba(1, 88, 172, 0.2);
 
 }
