set padding on select to 0.25em on all sides
closes #81

--- a/components/forms/select/select.less
+++ b/components/forms/select/select.less
@@ -11,7 +11,7 @@
   --border-color: var(--gray);
   border-radius:  var(--border-radius);
   box-shadow:     var(--shadow-button);
-  padding:        var(--padding-text);
+  padding:        0.25em;
 
   &:focus { outline: none; }
 
