add .line-input to .textline
closes #86

--- a/components/forms/textline/textline.less
+++ b/components/forms/textline/textline.less
@@ -37,7 +37,7 @@
     flex-direction: column;
   }
 
-  input {
+  input, .line-input {
 
     border:              0;
     border-bottom:       var(--border);
