--- a/components/forms/fieldset/fieldset.less
+++ b/components/forms/fieldset/fieldset.less
@@ -8,13 +8,22 @@
 .fieldset {
 
   border:        var(--border);
+  border-color:  var(--gray);
   border-radius: var(--border-radius);
   display:       flex;
+  padding:       0.5em;
 
   legend {
+    font-size:     smaller;
     font-weight:   var(--bold);
     overflow-wrap: break-word;
-    word-wrap:     break-word;
+    word-wrap:     break-word; // NOTE: This is an alias for overflow-wrap that some browsers use
+  }
+
+  > p {
+    color:     var(--placeholder-color);
+    font-size: smaller;
+    padding:   var(--padding-text);
   }
 
 }
