--- a/components/forms/button/button.less
+++ b/components/forms/button/button.less
@@ -6,11 +6,12 @@
 //
 // Markup: button.hbs
 //
-// :active     - When the button is clicked
-// :disabled   - When the button is disabled
-// :focus      - When the button is focused
-// :hover      - When the user hovers over the button
-// .button-red - A red button
+// :active       - When the button is clicked
+// :disabled     - When the button is disabled
+// :focus        - When the button is focused
+// :hover        - When the user hovers over the button
+// .button-red   - A red button
+// .button-green - A green button
 //
 // Styleguide Components.Forms.button
 .button {
@@ -43,6 +44,11 @@
     opacity:          0.4;
   }
 
+}
+
+.button-green {
+  .button;
+  .superdarkgreen-background;
 }
 
 .button-red {
