--- a/components/forms/input/input.less
+++ b/components/forms/input/input.less
@@ -172,9 +172,7 @@
   //
   // Styleguide Components.Forms.Inputs.reset
   &[type=reset] {
-    .button;
-    .superdarkgreen-background;
-    white-space: normal;
+    .button-green;
   }
 
   // Search Input
